# datalake-austa

./: .env.example  .gitignore  README.md
.claude/: settings.local.json
.claude/commands/: engenheiro-gold.md
.claude/rules/global/: aws-safety.md  git-workflow.md  sql-style.md  timestamps.md
.claude/rules/gold/: constellation.md  kimball-dimensions.md  kimball-facts.md  naming-conventions.md
.claude/rules/silver-context/: source-constraint.md
.github/: pull_request_template.md
.github/workflows/: deploy-airflow-dbt.yml
airflow/: requirements-cosmos.txt
airflow/dags/: .airflowignore  DAG_TAGS.md  README.md
airflow/dags/common/: bronze_stream_dbt.py  config.py  constants.py  cosmos_dbt.py  dbt_cli.py  default_args.py
airflow/dags/docs/: AIRFLOW_OPERACAO.md
airflow/dags/files/: raw_avro_compaction_job.py  test_austa_conta_stream_last_hour.py
airflow/dags/observability/: README.md  lakehouse_dbt_tests_smoke_dag.py
airflow/dags/orchestration/: bronze_tasy_atend_paciente_unidade_dag.py  bronze_tasy_conta_paciente_dag.py  (+5 more)
airflow/docs/: AIRFLOW_OPERACAO.md
dbt/: .env.example  README.md  dbt_project.yml  profiles.yml  profiles.yml.example  requirements-dbt.txt
dbt/docs/: ARCHITECTURE.md  DATA_CONTRACTS.md  FLUXO_USO_E_DICAS.md  MACROS.md  PLUGINS.md
dbt/models/: sources.yml
dbt/plugins/: pyproject.toml  sitecustomize.py
dbt/plugins/lakehouse_dbt_spark_patch.egg-info/: PKG-INFO  SOURCES.txt
docs/: bronze.md  git-fluxo-previo.md
docs/standards/: checklist-gold-kimball.md
scripts/: README_DEPLOY.md  deploy_to_ec2.ps1  validate_ec2_sync.ps1
(+54 files in other folders)
